# master-thesis

delfi-c3-analysis/: delfi-c3-telemetry-analysis.ipynb
delfi-pq-analysis/: anomaly-mcu.csv  base-cleaned.h5  base-df.h5  base_df.h5  delfi-pq-dnn.ipynb  temp.ipynb  temp.txt  test.ipynb  txt-to-csv.py
delfi-pq-analysis/temp/: artificial_df.h5  illumination_data.npy  res-models.ipynb
funcube-1-analysis/: LSTM-solar-inputs.ipynb  LSTM-step-size.ipynb
funcube-1-analysis/temp/: base-models.ipynb
ssa-calc/: LICENSE.rst  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg
ssa-calc/src/ssa_calc/: __init__.py  satellite.py
ssa-calc/src/ssa_calc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
