[metadata]
name = ssa_calc
version = 0.1a
description = A Python package for calculating satellite position in Earth orbit and satellite-sun angles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ullas-bhat/ssa-calc
author = Ullas Bhat
author_email = u.u.bhat@student.tudelft.nl
license = MIT
license_file = LICENSE.rst
platform = linux, osx, win
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Orbital Mechanics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = ssa_calc
python_requires = >=3.6
install_requires = 
    numpy>=1.18.1
    astropy>=4.0
    satmad>=0.1.0
package_dir =
    =src
zip_safe = False 

